    Maven Bill of Materials for the project.
- #31: Created ee.taltech.cs.mbt.tdl.parent_pom:
    Maven parent POM for the project.

### Changed
- #26: Use composition instead of an interface-based hack for a convenient operand contract for clients in ee.taltech.cs.mbt.tdl.expression.model.
- #27: Fix errors in ee.taltech.cs.mbt.tdl.expression.grammar.
- #31: Refactored ee.taltech.cs.mbt.tdl.expression.grammar into ee.taltech.cs.mbt.tdl.expression.tdl_grammar.
- #31: Refactored ee.taltech.cs.mbt.tdl.expression.model into ee.taltech.cs.mbt.tdl.expression.tdl_model.

### Removed
- #26: Removed ee.taltech.cs.mbt.tdl.expression.parser.

## [1.5] - 2019-05-??
### Added
- #58: Support for checked normalization exceptions (NormalizationException).
- #58: Support for checked literal elimination exceptions (LiteralEliminationException).
- #58: TdlTrivialTrueRecognizer.
- #58: TdlTrivialFalseRecognizer.
- #60: Added custom args4j option StringOrFile.

### Removed
- #58: Logic for TdlTerminatorAdapter.
- #58: Iteration of ScenarioWrapperConstructionContext.getGloballyApplicableTransitionSynchs() in ScenarioSystemComposer.compose().

### Changed
- #58: Fixed incorrect usage of GroupNormalizingReducer in ExpressionNormalizer.
- #58: Use hyphens in all artifact names (seems to be a common practice in Maven projects).
- #58: Fix TDL grammar (matches original BNF more closely now).
- #58: "linked pair trapset" is actually "linked pairs trapset".
- #58: Add getHumanReadableNames() to TDL expression node objects.
- #58: Semantics of boolean literals in TDL expressions has changed (they now represent "instant" truth).
- #58: TDL ChildContainer: relax rules in replaceChild() (support for object identity checking).
- #58: A({}) -> True; E({}) -> False.
- #58: Deprecate ScenarioSystemComposer.processGloballyApplicableTransitionSynch().
- #60: -e|--expression in CLI to support **both** file path strings and TDL<sup>TP</sup> expression strings.