@@ -18,7 +18,7 @@ public class SExpressionLanguageBaseVisitor<T> extends AbstractParseTreeVisitor<
 	 * <p>The default implementation returns the result of calling
 	 * {@link #visitChildren} on {@code ctx}.</p>
 	 */
-	@Override public T visitSexpr(SExpressionLanguageParser.SexprContext ctx) { return visitChildren(ctx); }
+	@Override public T visitSExpr(SExpressionLanguageParser.SExprContext ctx) { return visitChildren(ctx); }
 	/**
 	 * {@inheritDoc}
 	 *
